@@ -115,5 +115,4 @@ string(86) "Trying to invoke private method TestClass::privateMethod() from scop
 
 Abstract method:
 string(53) "Trying to invoke abstract method AbstractClass::foo()"
-
-Warning: ReflectionMethod::invokeArgs() expects exactly 2 parameters, 1 given in %s on line %d
+string(53) "Trying to invoke abstract method AbstractClass::foo()"
